--- a/push_swap/makefile
+++ b/push_swap/makefile
@@ -1,20 +1,22 @@
 NAME = push_swap
+
 LIB = lib/libft.a
-CC = cc
-CFLAGS = -Wall -Werror -Wextra -MMD
-RM = rm -rf
-OBJS = ${SRCS:.c=.o}
+
 SRCS = main.c \
-       utils/linked_list_utils.c \
-       utils/parsing_utils.c
+		utils/linked_list_utils.c \
+		utils/parsing_utils.c
+
+OBJS = ${SRCS:.c=.o}
 
 all: ${NAME}
 
 ${NAME}: ${OBJS} ${LIB}
-	@echo -e "\E[32m blablablablaaaa \E[0m"
-	@echo -e "\E[32m Compiling $@ \E[0m"
-	${CC} ${CFLAGS} -o $@ $^ ${LIB}
+	@echo -e "Compiling $@"
+	${CC} ${CFLAGS} -o $@ $^
 	@echo "Build complete"
+
+${LIB}:
+	$(MAKE) -C lib lib
 
 %.o: %.c
 	@echo "Compiling $<"
@@ -23,13 +25,17 @@ ${NAME}: ${OBJS} ${LIB}
 clean:
 	@echo "Cleaning object files"
 	${RM} ${OBJS} ${OBJS:.o=.d}
+	$(MAKE) -C lib lib_clean
 
 fclean: clean
 	@echo "Cleaning executable"
 	${RM} ${NAME}
+	$(MAKE) -C lib lib_fclean
 
 re: fclean all
 
 .PHONY: all clean fclean re
 
 -include ${OBJS:.o=.d}
+
+include lib/Makefile
